Good refactor enough
